add bootstrap buttons and jQuery ajax call

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,6 +1,7 @@
 :root{
     --h1-font-weight:800;
-    --text-white: white;
+    --btn-hover:orange;
+    --text-color:white;
 
 }
 
@@ -24,7 +25,7 @@ html{
 body {
     overflow: hidden;
     position: relative;
-    color: var(--text-white);
+    color: var(--text-color);
 }
 
 body::before {
@@ -62,7 +63,7 @@ main{
     /* margin-top: 20%; */
     /* margin-bottom: 30px; */
     /* box-shadow: -150px -20px 180px white ; */
-    box-shadow: -10px -10px 50px white;
+    box-shadow: -10px -10px 50px var(--text-color);
 }
 h1{
     font-size: 2rem;
@@ -72,5 +73,15 @@ h1{
 p{
     font-size: 1.5rem;
     text-align: center;
+
+}
+.btn{
+    color: var(--text-color);
+}
+#jokes{
+    color: var(--text-color);
+    box-shadow: 2px 4px 4px 5px rgb(245 137 11);
+    /* box-shadow: -10px -10px 50px var(--text-color); */
+    font-weight: 600;
 
 }
